# advent-of-code-2022

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  sonar-project.properties  start_and_work_in_container.sh
.github/workflows/: sonarcloud.yml
day-1/: CMakeLists.txt  day-1-calorie-counting.cpp  day-1-calorie-counting.hpp  main.cpp
day-2/: CMakeLists.txt  constants.hpp  day-2-rock-paper-scissors.cpp  day-2-rock-paper-scissors.hpp  main.cpp
day-3/: CMakeLists.txt  day-3-rucksack-reorganization.cpp  day-3-rucksack-reorganization.hpp  main.cpp
day-4/: CMakeLists.txt  day-4-camp-cleanup.cpp  day-4-camp-cleanup.hpp  main.cpp
day-5/: CMakeLists.txt  day-5.cpp  day-5.hpp  main.cpp
template/src/: CMakeLists.txt  day-N.cpp  day-N.hpp  main.cpp
template/test/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt
test/day-1/: CMakeLists.txt  test.cpp
test/day-2/: CMakeLists.txt  test.cpp
test/day-3/: CMakeLists.txt  test.cpp
test/day-4/: CMakeLists.txt  test.cpp
test/day-5/: CMakeLists.txt  test.cpp
test/utils/: CMakeLists.txt  test.cpp
utils/: CMakeLists.txt  filehandler.cpp  filehandler.hpp  input_parser.cpp  input_parser.hpp
